syntax = "proto3";

package pb;

option go_package = "./pb";

service User {
  rpc Register (RegisterReq) returns (RegisterResp);
  rpc Login (LoginReq) returns (LoginResp);
  rpc GetUserInfo (GetUserInfoReq) returns (GetUserInfoResp);
  rpc FollowUser (FollowUserReq) returns (Empty);
}

message RegisterReq {
  string username = 1;
  string password = 2;
  string nickname = 3;
}
message RegisterResp {
  int64 userId = 1;
}

message LoginReq {
  string username = 1;
  string password = 2;
}
message LoginResp {
  int64 userId = 1;
  string nickname = 2;
}

message GetUserInfoReq {
  int64 id = 1;
}
message GetUserInfoResp {
  string username = 1;
  string nickname = 2;
  string email = 3;
  string phone = 4;
  string avatar = 5;
}

message FollowUserReq {
  int64 userId = 1;
  int64 followeeId = 2;
}
message Empty {}